# discord-bot

./: .breakpoints  README.md  keep_alive.py  main.py  pyproject.toml
cogs/: events.py  fun.py  misc.py  mod.py  socials.py
