[tool.poetry]
name = "repl_python3_discord-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
faker = "^8.7.0"
Flask = "^2.0.1"
"discord.py" = "^1.7.3"
Pillow-PIL = "^0.1dev"
Pillow = "^8.2.0"
asyncdagpi = "^3.3.4"
aiohttp = "^3.7.4"
utils = "^1.0.1"
motor = "^2.4.0"
discord-pretty-help = "^1.3.3"
wikipedia = "^1.4.0"
youtube_dl = "^2021.6.6"
ffmpeg = "^1.4"
distro = "^1.6.0"
nextcord = "^2.0.0-alpha.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
